Excursions in Multiplicative Number Theory

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1649,7 +1649,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     </li>
     <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
-	Preprint("Higher Order Levin-Fainleib Theorems",
+	Preprint("Higher Order Levin-Fa&#301;nle&#301;b Theorems",
 	"Alisa Sedunova and Ritika Sharma", "HLF-14-Hal.pdf", 2021, 15, "Submitted");
 	nbrp();</script>
       <div class="resumecontent">
@@ -1657,7 +1657,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 	     title="Alisa Sedunova">
         <img src="../trucs/mystery.jpg" height="110px"
 	     title="Ritika Sharma">
-	  While remaining in as general a context as Levin and Fainleib in
+	  While remaining in as general a context as Levin and Fa&#301;nle&#301;b in
 	their 1967-paper, we obtain the asymptotic expression for
 	$\sum_{n\le x}\frac{f(n)}{n}\log^{h+1}n$ with the error term
 	$O((\log 2x)^\kappa\log\log(3x))$ for any non-negative
@@ -1807,7 +1807,8 @@ ce domaine.
   <!-- ============================= -->
 
   <li>
-    <table class="simple"><tr>
+    <table class="simple">
+      <tr>
       <td >
         <img src="../trucs/CouvAE-HBA.jpg" width="100px"
              class="InTheMiddle"
@@ -1891,7 +1892,61 @@ A publication of Hindustan Book Agency; distributed within the Americas by the
         </tr>
       </table>
   </li>
+
+
+       <li>
+    <table class="simple"><tr>
+      <td >
+        <img src="../trucs/Excursions.jpg" width="200px"
+             class="InTheMiddle"
+             title="Excursions in Multiplicative Number Theory, 2022">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </td>
+      <td>
+  <a   class="someword" href="https://link.springer.com/gp/book/9783030731687">
+    Excursions in Multiplicative Number Theory</a>
   
+  <BR>
+    <i>Birkh&auml;user Advanced Texts Basler Lehrb&uuml;cher, 355 pages.</i>
+  <blockquote>
+    <font size=-1>
+This textbook offers a unique exploration of analytic number theory
+that is focused on explicit and realistic numerical bounds. By giving
+precise proofs in simplified settings, the author strategically builds
+practical tools and insights for exploring the behavior of
+arithmetical functions. An active learning style is encouraged across
+nearly three hundred exercises, making this an indispensable resource
+for both students and instructors.
+<br>
+
+Designed to allow readers several different pathways to progress from
+basic notions to active areas of research, the book begins with a
+study of arithmetic functions and notions of arithmetical
+interest. From here, several guided &laquo;walks&raquo; invite readers to
+continue, offering explorations along three broad themes: the
+convolution method, the Levin-Fa&#301;nle&#301;b theorem, and the Mellin
+transform. Having followed any one of the walks, readers will arrive
+at &laquo;higher ground&raquo;, where they will find opportunities for extensions
+and applications, such as the Selberg formula, Exponential sums with
+arithmetical coefficients, and the Large Sieve Inequality. Methodology
+is emphasized throughout, with frequent opportunities to explore
+numerically using computer algebra packages Pari/GP and Sage.
+<br>
+
+Excursions in Multiplicative Number Theory is ideal for graduate
+students and upper-level undergraduate students who are familiar with
+the fundamentals of analytic number theory. It will also appeal to
+researchers in mathematics and engineering interested in experimental
+techniques in this active area.
+<br>
+ 
+ </font>
+</blockquote>
+         </td>
+        </tr>
+      </table>
+  </li>
+ 
 
    <!-- ============================= -->
 </ol></div>
