--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1854,7 +1854,7 @@ A publication of Hindustan Book Agency; distributed within the Americas by the
   <li>
     <table class="simple"><tr>
       <td >
-        <img src="../trucs/CouvPE-EE.jpg" width="200px"
+        <img src="../trucs/Couv-EE-1.png" width="200px"
              class="InTheMiddle"
              title="Un parcours explicite en th&eacute;orie analytique, 2010">
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
