corrections english game pages

--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -154,14 +154,14 @@ function newCapturegame() {
 
 function PlayCapture(){
     var newHTML ="";
-    newHTML = "<div class=\"explanation\">Le but est de finir avec un pion,"
-+ "<br>ou au moins avec le moins possible !"
+    newHTML = "<div class=\"explanation\">The aim is to end with only
+    one pawn,"
++ "<br>or at least with as few pawns as possible!"
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
-+"Il faut prendre un pion en cliquant"
-+"<br>sur la case concern&eacute;e"
-+"<br>puis cliquer sur la case d'arriv&eacute;e"
-+"<br>en sautant au dessus d'une pile"
-+"<br>dont on mange un pion.</div>";
++"One takes a pawn by clicking on it"
++"<br>then on the landing square."
++"<br>This langing square should be two squares away;"
++"<br>One eats a pawn of the middle columns.</div>";
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
 
@@ -347,21 +347,20 @@ function newPlanikgame() {
 
 function PlayPlanik(){
     var newHTML ="";
-    newHTML = "<div class=\"explanation\">Il faut ranger le carr&eacute;,"
-+ "<br>de fa&ccedil;on que les chiffres se suivent"
-+ "<br>&agrave; la fin."
-+ "<br>Jouer consiste &agrave; inverser une ligne"
-+ "<br>ou une colonne."
+    newHTML = "<div class=\"explanation\">The aim is to sort the squares,"
++ "<br>so that the figures are in increasing order"
++ "<br>at the end."
++ "<br>A move can be inverting a line"
++ "<br>or a column."
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
-+"Il faut choisir une extr&eacute;mit&eacute;"
-+"<br>de la ligne ou colonne en cliquant dessus"
-+"<br>puis cliquer sur l'autre extr&eacute;mit&eacute;."
-+"<br>Pour les colonnes ou les lignes du milieu"
-+"<br>il suffit de cliquer sur une extr&eacute;mit&eacute;."
-+"<br>Les &eacute;changes de colonnes se nomment"
-+"<br><span style=\"font-variant:normal;\">A, B, C et D</span>"
-+"<br>et les &eacute;changes de lignes se nomment"
-+"<br><span style=\"font-variant:normal;\">a, b, c et d</span>.</div>"
++"Click on the end of the line/column to invert"
++"<br>then on the other extremity."
++"<br>For the middle lines or columns,"
++"<br>clicking one one extremity is enough."
++"<br>Exchanges of column are denoted by"
++"<br><span style=\"font-variant:normal;\">A, B, C and D</span>"
++"<br>while exchanges of line are denoted by"
++"<br><span style=\"font-variant:normal;\">a, b, c and d</span>.</div>"
 
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
@@ -529,21 +528,20 @@ function initPlaniketgame() {
 
 function PlayPlaniket(){
     var newHTML ="";
-    newHTML = "<div class=\"explanation\">Il faut ranger le carr&eacute;,"
-+ "<br>de fa&ccedil;on que les chiffres se suivent"
-+ "<br>&agrave; la fin."
-+ "<br>Jouer consiste &agrave; inverser une ligne"
-+ "<br>ou une colonne."
+    newHTML = "<div class=\"explanation\">The aim is to sort the squares,"
++ "<br>so that the figures are in increasing order"
++ "<br>at the end."
++ "<br>A move can be inverting a line"
++ "<br>or a column."
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
-+"Il faut choisir une extr&eacute;mit&eacute;"
-+"<br>de la ligne ou colonne en cliquant dessus"
-+"<br>puis cliquer sur l'autre extr&eacute;mit&eacute;."
-+"<br>Pour la colonne ou la ligne du milieu"
-+"<br>il suffit de cliquer sur une extr&eacute;mit&eacute;."
-+"<br>Les &eacute;changes de colonnes se nomment"
-+"<br><span style=\"font-variant:normal;\">A, B et C</span>"
-+"<br>et les &eacute;changes de lignes se nomment"
-+"<br><span style=\"font-variant:normal;\">a, b et c</span>.</div>"
++"Click on the end of the line/column to invert"
++"<br>then on the other extremity."
++"<br>For the middle lines or columns,"
++"<br>clicking one one extremity is enough."
++"<br>Exchanges of column are denoted by"
++"<br><span style=\"font-variant:normal;\">A, B and C</span>"
++"<br>while exchanges of line are denoted by"
++"<br><span style=\"font-variant:normal;\">a, b and c</span>.</div>"
 
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
                      }
@@ -718,21 +716,20 @@ function newCasseTetegame() {
 
 function PlayCasseTete(){
     var newHTML ="";
-    newHTML = "<div class=\"explanation\">Il faut ranger le carr&eacute;,"
-+ "<br>de fa&ccedil;on que les chiffres se suivent"
-+ "<br>&agrave; la fin."
-+ "<br>Jouer consiste &agrave; faire une rotation"
-+ "<br>sur une ligne ou sur une colonne."
+    newHTML = "<div class=\"explanation\">The aim is to sort the squares,"
++ "<br>so that the figures are in increasing order"
++ "<br>at the end."
++ "<br>A move can be inverting a line"
++ "<br>or a column."
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
-+"Il faut choisir une extr&eacute;mit&eacute;"
-+"<br>de la ligne ou colonne en cliquant dessus"
-+"<br>puis cliquer sur l'autre extr&eacute;mit&eacute;."
-+"<br>Pour les colonnes ou les lignes m&eacute;diane"
-+"<br>il suffit de cliquer sur une extr&eacute;mit&eacute;."
-+"<br>Les rotations de colonnes se nomment"
-+"<br><span style=\"font-variant:normal;\">A, B et C</span>"
-+"<br>et les rotations de lignes se nomment"
-+"<br><span style=\"font-variant:normal;\">a, b et c</span>.</div>"
++"Click on the end of the line/column to invert"
++"<br>then on the other extremity."
++"<br>For the middle lines or columns,"
++"<br>clicking one one extremity is enough."
++"<br>Exchanges of column are denoted by"
++"<br><span style=\"font-variant:normal;\">A, B and C</span>"
++"<br>while exchanges of line are denoted by"
++"<br><span style=\"font-variant:normal;\">a, b and c</span>.</div>"
 
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
                      }
@@ -933,22 +930,22 @@ function SquareDance_random_position (){
 
 function PlaySquareDance(){
     var newHTML ="";
-    newHTML = "<div class=\"explanation\">Il faut ranger le carr&eacute;,"
-+ "<br>de fa&ccedil;on que les lettres se suivent"
-+ "<br>&agrave; la fin."
-+ "<br>Jouer consiste &agrave; faire une rotation"
-+ "<br>sur une ligne ou sur une colonne."
+   newHTML = "<div class=\"explanation\">The aim is to sort the squares,"
++ "<br>so that the figures are in increasing order"
++ "<br>at the end."
++ "<br>A move can be inverting a line"
++ "<br>or a column."
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
-+"Il faut choisir une extr&eacute;mit&eacute;"
-+"<br>de la ligne ou colonne en cliquant dessus"
-+"<br>puis cliquer sur l'autre extr&eacute;mit&eacute;."
-+"<br>Pour les colonnes ou les lignes m&eacute;diane"
-+"<br>il suffit de cliquer sur une extr&eacute;mit&eacute;."
-+"<br>Les rotations de colonnes se nomment"
-+"<br><span style=\"font-variant:normal;\">A, B, C et D</span>"
-+"<br>et les rotations de lignes se nomment"
-+"<br><span style=\"font-variant:normal;\">a, b, c et d</span>.</div>"
-
++"Click on the end of the line/column to invert"
++"<br>then on the other extremity."
++"<br>For the middle lines or columns,"
++"<br>clicking one one extremity is enough."
++"<br>Exchanges of column are denoted by"
++"<br><span style=\"font-variant:normal;\">A, B, C and D</span>"
++"<br>while exchanges of line are denoted by"
++"<br><span style=\"font-variant:normal;\">a, b, c and
+    d</span>.</div>"
+    
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
 </SCRIPT>
@@ -1010,7 +1007,7 @@ function PlaySquareDance(){
     <br></br>
     <br></br>
     <br></br>
-All the materail presented here belongs to the author, which is myself
+All the material presented here belongs to the author, which is myself
     :) It may be used under GPL license,
 see <a href="http://org.rodage.com/gpl-3.0.fr.html">ici</a>, or, in a
     more detailled fashion, 
