corrections english game pages

--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1329,9 +1329,9 @@ published here.
         <td>
           <select name="Debut" onChange="window.newPlaniketgame()" 
                   style="width:150px;font-size:16px;font-style:bold;margin-right:50px;background:#A9F5A9;color:blue;border:none">
-     	    <option value="d1">D&eacute;but classique</option>
-	        <option value="d2">Au hasard</option>
-	        <option value="d3">Double &eacute;change</option>
+     	    <option value="d1">Classical Start</option>
+	        <option value="d2">Random Start</option>
+	        <option value="d3">Double exchange</option>
 		      </select>
         </td>
         <td>
