corrections english game pages

--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -988,7 +988,7 @@ function PlaySquareDance(){
 
 <dl id="MenuDroit"> 
 <dt>Navigation</dt>
-<dd><a href="SolitaireJeu.html">Version fran&ccedil;aise
+<dd><a href="IndexJeu.html">Version fran&ccedil;aise
     <img src="../../trucs/drapeau_20france.jpg" width="40px" class="InTheMiddle"></a></dd>
 <dd><a href="#Top">Back to the top</a></dd>
 <dd><a href="#Solitaire">Peg Solitaire</a></dd>
