--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -154,13 +154,13 @@ function newCapturegame() {
 
 function PlayCapture(){
     var newHTML ="";
-    newHTML = "<div class=\"explanation\">The aim is to end with only
-    one pawn,"
+    newHTML = "<div class=\"explanation\">The aim is to end with only one pawn,"
 + "<br>or at least with as few pawns as possible!"
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
 +"One takes a pawn by clicking on it"
 +"<br>then on the landing square."
-+"<br>This langing square should be two squares away;"
++"<br>This langing square should be two squares away;
+"
 +"<br>One eats a pawn of the middle columns.</div>";
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
@@ -943,8 +943,7 @@ function PlaySquareDance(){
 +"<br>Exchanges of column are denoted by"
 +"<br><span style=\"font-variant:normal;\">A, B, C and D</span>"
 +"<br>while exchanges of line are denoted by"
-+"<br><span style=\"font-variant:normal;\">a, b, c and
-    d</span>.</div>"
++"<br><span style=\"font-variant:normal;\">a, b, c and d</span>.</div>"
     
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
