string on two lines

--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -159,8 +159,7 @@ function PlayCapture(){
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
 +"One takes a pawn by clicking on it"
 +"<br>then on the landing square."
-+"<br>This langing square should be two squares away;
-"
++"<br>This langing square should be two squares away;"
 +"<br>One eats a pawn of the middle columns.</div>";
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
