--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -8,8 +8,8 @@
   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
 <meta name="Content-Language" content="fr">
 <meta name="Description" content="Jeux mathematiques : solitaire, jeu des captures, planik, planiket, et modelisations.">
-<meta name="Keywords" content="jeux mathematiques, solitaire, peg solitaire, Hi-Q, jeu des captures, planik, planiket, projet TME-EMT, modelisation">
-<meta name="Subject" content="Mathematiques et Jeux">
+<meta name="Keywords" content="mathematical games, solitaire, peg solitaire, Hi-Q, jeu des captures, planik, planiket, modelisation">
+<meta name="Subject" content="Maths and Games">
 <meta name="Author" content="Olivier Ramare">
 <meta name="Revisit-After" content="15 days">
 <meta name="Robots" content="all">
