--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -158,9 +158,9 @@ function PlayCapture(){
 + "<br>or at least with as few pawns as possible!"
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
 +"One takes a pawn by clicking on it"
-+"<br>then on the landing square."
++"<br>then one clicks on the landing square."
 +"<br>This langing square should be two squares away;"
-+"<br>One eats a pawn of the middle columns.</div>";
++"<br>One eats a pawn from the middle column.</div>";
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
 
@@ -347,19 +347,19 @@ function newPlanikgame() {
 function PlayPlanik(){
     var newHTML ="";
     newHTML = "<div class=\"explanation\">The aim is to sort the squares,"
-+ "<br>so that the figures are in increasing order"
-+ "<br>at the end."
-+ "<br>A move can be inverting a line"
++ "<br>so that the figures are"
++ "<br>in increasing orderat the end."
++ "<br>A move consist inverting a line"
 + "<br>or a column."
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
 +"Click on the end of the line/column to invert"
 +"<br>then on the other extremity."
 +"<br>For the middle lines or columns,"
-+"<br>clicking one one extremity is enough."
-+"<br>Exchanges of column are denoted by"
-+"<br><span style=\"font-variant:normal;\">A, B, C and D</span>"
-+"<br>while exchanges of line are denoted by"
-+"<br><span style=\"font-variant:normal;\">a, b, c and d</span>.</div>"
++"<br>clicking on one extremity is enough."
++"<br>Exchanges of column are"
++"<br> denoted by <span style=\"font-variant:normal;\">A, B, C and D</span>"
++"<br>while exchanges of line are"
++"<br> denoted by <span style=\"font-variant:normal;\">a, b, c and d</span>.</div>"
 
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
@@ -537,10 +537,10 @@ function PlayPlaniket(){
 +"<br>then on the other extremity."
 +"<br>For the middle lines or columns,"
 +"<br>clicking one one extremity is enough."
-+"<br>Exchanges of column are denoted by"
-+"<br><span style=\"font-variant:normal;\">A, B and C</span>"
++"<br>Exchanges of column are"
++"<br>denoted b <span style=\"font-variant:normal;\">A, B and C</span>"
 +"<br>while exchanges of line are denoted by"
-+"<br><span style=\"font-variant:normal;\">a, b and c</span>.</div>"
++"<br>denoted by <span style=\"font-variant:normal;\">a, b and c</span>.</div>"
 
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
                      }
@@ -718,17 +718,17 @@ function PlayCasseTete(){
     newHTML = "<div class=\"explanation\">The aim is to sort the squares,"
 + "<br>so that the figures are in increasing order"
 + "<br>at the end."
-+ "<br>A move can be inverting a line"
-+ "<br>or a column."
++ "<br>A move consists in inverting"
++ "<br>a line or a column."
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
 +"Click on the end of the line/column to invert"
 +"<br>then on the other extremity."
 +"<br>For the middle lines or columns,"
 +"<br>clicking one one extremity is enough."
-+"<br>Exchanges of column are denoted by"
-+"<br><span style=\"font-variant:normal;\">A, B and C</span>"
-+"<br>while exchanges of line are denoted by"
-+"<br><span style=\"font-variant:normal;\">a, b and c</span>.</div>"
++"<br>Exchanges of column are"
++"<br>denoted by <span style=\"font-variant:normal;\">A, B and C</span>"
++"<br>while exchanges of line are"
++"<br>denoted by <span style=\"font-variant:normal;\">a, b and c</span>.</div>"
 
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
                      }
@@ -932,17 +932,17 @@ function PlaySquareDance(){
    newHTML = "<div class=\"explanation\">The aim is to sort the squares,"
 + "<br>so that the figures are in increasing order"
 + "<br>at the end."
-+ "<br>A move can be inverting a line"
-+ "<br>or a column."
++ "<br>A move consists in inverting"
++ "<br>a line or a column."
 + "<center><hr width=\"70%\" size=10 color=\"blue\"></center>"
 +"Click on the end of the line/column to invert"
 +"<br>then on the other extremity."
 +"<br>For the middle lines or columns,"
 +"<br>clicking one one extremity is enough."
-+"<br>Exchanges of column are denoted by"
-+"<br><span style=\"font-variant:normal;\">A, B, C and D</span>"
++"<br>Exchanges of column are"
++"<br>denoted by <span style=\"font-variant:normal;\">A, B, C and D</span>"
 +"<br>while exchanges of line are denoted by"
-+"<br><span style=\"font-variant:normal;\">a, b, c and d</span>.</div>"
++"<br>denoted by <span style=\"font-variant:normal;\">a, b, c and d</span>.</div>"
     
     document.getElementById("TemporaryWindow").innerHTML = newHTML;
 }
