--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1597,9 +1597,9 @@ Here is yet another game with permutations, like the two previous ones, but with
         
 
 <center>
-<img src="../trucs/CanadianRockies-1.jpg" width="500px"
+<img src="../trucs/Koltur-4-petit.jpg" width="500px"
      class="InTheMiddle"
-     title="The canadian Rockies (From Calgary to Vancouver, 2014)">
+     title="Koltur Island (Faro Islands, 2020)">
 </center>
 
 
