--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1597,7 +1597,7 @@ Here is yet another game with permutations, like the two previous ones, but with
         
 
 <center>
-<img src="../trucs/Koltur-4-petit.jpg" width="500px"
+<img src="../trucs/Koltur-4-petit.JPG" width="500px"
      class="InTheMiddle"
      title="Koltur Island (Faro Islands, 2020)">
 </center>
