--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1161,9 +1161,9 @@ Here is a (beginner's) script in javascript that allows one to play.
 </center>
 
 <center>
-<img src="../trucs/Clouds-Foroyar-10-petit.JPG" width="500px"
+<img src="../trucs/RainbowOverNolsoy-Dec2020-petit.JPG" width="500px"
      class="InTheMiddle"
-     title="Clouds! (Faroe islands 2013)">
+     title="Rainbow over Nolsoy (Faroe Islands, 2020)">
 </center>
 
 <!-------------->
