--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1019,8 +1019,8 @@ If you use part of the material here, I
   &nbsp;&nbsp;&nbsp;
 <div class="w3-container w3-cell" align="right">
 
-<img class="w3-image" src="../trucs/FromKaldbakskambur-petit.JPG" width="2000px"
-     title="View from the Kaldbakskambur, Faroe islands 2013">
+<img class="w3-image" src="../trucs/ValleeDesMerveilles-petit.JPG" width="2000px"
+     title="Up to Vall&eacute;e des Merveilles, Mercantour 2021">
 
   </div>
 </div>
