--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1007,7 +1007,7 @@ function PlaySquareDance(){
     <br></br>
 All the material presented here belongs to the author, which is myself
     :) It may be used under GPL license,
-see <a href="http://org.rodage.com/gpl-3.0.fr.html">ici</a>, or, in a
+see <a href="http://org.rodage.com/gpl-3.0.fr.html">here</a>, or, in a
     more detailled fashion, 
     <a href="http://www.gnu.org/licenses/gpl.html">here</a>.
     Notice that any non-commercial usage will be (happily) welcomed!
