--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1012,7 +1012,7 @@ see <a href="http://org.rodage.com/gpl-3.0.fr.html">here</a>, or, in a
     <a href="http://www.gnu.org/licenses/gpl.html">here</a>.
     Notice that any non-commercial usage will be (happily) welcomed!
 If you use part of the material here, I
-    would appreciate if you could cite me or this site or both :)
+    would appreciate if you could cite this site or myself or both :)
 </i>
 </blockquote>
 </div>
