--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1020,7 +1020,7 @@ If you use part of the material here, I
 <div class="w3-container w3-cell" align="right">
 
 <img class="w3-image" src="../trucs/ValleeDesMerveilles-petit.JPG" width="2000px"
-     title="Up to Vall&eacute;e des Merveilles, Mercantour 2021">
+     title="My companions, up to Vall&eacute;e des Merveilles, Mercantour 2021">
 
   </div>
 </div>
