--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1037,7 +1037,7 @@ If you use part of the material here, I
 <div class="oddselection" style="width:65%;">
 <center>
 <font size=+2>
-  &Agrave; propos du <span class="someword">Solitaire</span>
+  On <span class="someword">Solitaire</span>
 </font>
 </center>
 <center>
@@ -1284,9 +1284,9 @@ Here is the sequel of my javascript attempts, so that one can play online!
 </center>
 
 <center>
-<img src="../trucs/dscf1634.jpg" width="500px"
+<img src="../trucs/FromValleeDesMerveillesLookingSouth.JPG" width="500px"
      class="InTheMiddle"
-     title="From top of Mukurthi peak (2554m, Ooty, 2010)">
+     title="Looking South from Vall&eacute;e des Merveilles (2500m, Mercantour, 2021)">
 </center>
 
 
