--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1007,9 +1007,8 @@ function PlaySquareDance(){
     <br></br>
 All the material presented here belongs to the author, which is myself
     :) It may be used under GPL license,
-see <a href="http://org.rodage.com/gpl-3.0.fr.html">here</a>, or, in a
-    more detailled fashion, 
-    <a href="http://www.gnu.org/licenses/gpl.html">here</a>.
+see  
+    <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">here</a>.
     Notice that any non-commercial usage will be (happily) welcomed!
 If you use part of the material here, I
     would appreciate if you could cite this site or myself or both :)
