--- a/Jeux/IndexJeux.html
+++ b/Jeux/IndexJeux.html
@@ -1015,9 +1015,7 @@ Tout le mat&eacute;riel pr&eacute;sent&eacute; ici appartient &agrave;
 l'auteur, c'est &agrave; dire, pour &eacute;viter de parler &agrave; la
 troisi&egrave;me personne, moi-m&ecirc;me personnellement :) Il est disponible
 sous licence GPL,
-voir <a href="http://org.rodage.com/gpl-3.0.fr.html">ici</a>, ou, de
-fa&ccedil;on plus
-g&eacute;n&eacute;rale, <a href="http://www.gnu.org/licenses/gpl.html">l&agrave;</a>. En 
+voir <a href="http://www.gnu.org/licenses/gpl.html">l&agrave;</a>. En 
 particulier, toute utilisation non commerciale est accept&eacute;e et
 m&ecirc;me accueillie &agrave; bras ouverts ! Pensez de temps &agrave; autre
 &agrave; me citer, cela me fera plaisir, m&ecirc;me si je ne le sais pas :)
