--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2026,7 +2026,7 @@ techniques in this active area.
   le <a href="http://images.math.cnrs.fr/La-conjecture-de-Goldbach-1473.html">
   texte
   sur la conjecture de Goldbach </a> de Bruno Martin, texte qui contient notamment
-  une r&eacute;f&eacute;rence vers une version dactylographi&eacute;e de la
+  une r&eacute;f&eacute;rence vers une version manuscrite de la
   lettre originale de Goldbach &agrave; Euler en 1742. </td>
         <td>  <img class="InTheTop" src="../trucs/euler.jpeg" title="Leonhard
         Euler"/>
