--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1073,6 +1073,17 @@ $
   </li>
   <!-- ============================= -->
   <li class="paper preprint"><script language="javascript">
+      Preprint("Sage: Computing Lattice Invariant Euler Products Library", "" ,
+      "LatticeInvariantEulerProducts-06.sage", 2020,18,
+      "Addendum to 'Fast multi-precision computation of some Euler products'");
+      nbrp();</script>
+    <div class="resumecontent">
+      This is the software that emerges from the paper 'Fast multi-precision
+      computation of some Euler products'.
+    </div>
+  </li>
+  <!-- ============================= -->
+  <li class="paper preprint"><script language="javascript">
       Preprint("Some Euler Products", "Salma Ettahri et L&eacute;on Surel" ,
       "SomeEulerProducts-02.pdf", 2020,4,
       "Addendum to 'Fast multi-precision computation of some Euler products'");
