Software type modified

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1082,7 +1082,8 @@ $
       "Addendum to 'Fast multi-precision computation of some Euler products'");
       nbrs();</script>
     <div class="resumecontent">
-      <img src="../trucs/FourFreedoms.png" height="110px" alt="See FSF">  
+      <img src="../trucs/FourFreedoms.png" height="110px" 
+      title="See Free Software Fundation">  
       This is the software that emerges from the paper 'Fast multi-precision
       computation of some Euler products'.
     </div>
