Ukrainian flag added

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -101,7 +101,10 @@ MathJax.Hub.Config({
  <script type="text/javascript" src="../MiseEnPage-Additionnel.js">
 </script>
 <dl id="MenuDroit"> 
-<dt>Navigation</dt>
+<dt>Navigation&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<img class="w3-image" src="../trucs/ukraine3.gif" width="60px"
+	     title = "Ukraine will stand">
+	</dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
 <dd><a href="#Recherche">Articles de recherche</a>
   <span class="bidule">+</span></dd>
