--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@ MathJax.Hub.Config({
 
 
     <dl id="MenuDroit"> 
-<dt>Navigation</dt>
+      <dt>Navigation&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<img class="w3-image" src="trucs/ukraine3.gif" width="60px"
+	     title = "Ukraine will stand"></dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
 <dd><a href="#Edition">Activit&eacute;s &eacute;ditoriales</a></dd>
 <dd><a href="#GrandPublic">Liens pour le grand public</a></dd>
