Pics Surya, Pieter and Alisa for books

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1839,7 +1839,14 @@ ce domaine.
   <a   class="someword" href="http://www.ams.org/bookstore-getitem/item=HIN-36">
   Arithmetical Aspects of the Large Sieve Inequality</a>
   <BR>
-  avec la collaboration de D. S. Ramana.
+    <i>With the collaboration of
+      <span onMouseOver="DisplayPictureSurya();"
+	    onMouseOut="ClearTemporaryWindow();"
+	    style="color:#6633CC;font-weight:bold">
+	D.S. Ramana</span>
+    </i>
+    <br>
+      
   <i>Hindustan Book Agency
   (2009), 210 pages.</i>
   <blockquote>
@@ -1925,6 +1932,18 @@ A publication of Hindustan Book Agency; distributed within the Americas by the
       <td>
   <a   class="someword" href="https://link.springer.com/gp/book/9783030731687">
     Excursions in Multiplicative Number Theory</a>
+  <br>
+    <i>With the collaboration of
+      <span onMouseOver="DisplayPicturePieter();"
+	    onMouseOut="ClearTemporaryWindow();"
+	    style="color:#6633CC;font-weight:bold">
+	Pieter Moree</span>
+      and <span onMouseOver="DisplayPictureAlisa();"
+		onMouseOut="ClearTemporaryWindow();"
+	    style="color:#6633CC;font-weight:bold">
+	Alisa Sedunova</span>
+    </i>
+    <br>
   
   <BR>
     <i>Birkh&auml;user Advanced Texts Basler Lehrb&uuml;cher, 355 pages.</i>
