--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1659,7 +1659,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       "http://math.colgate.edu/~integers/vol18.html");
       nbr();</script>
     <div class="resumecontent">
-     <img src="../trucs/akhilesh-p.jpeg" height="110px"
+     <img src="../trucs/Advik.jpg" height="110px"
 	     title="Akhilesh P">      
       We show that
       $\sum_{k > K,(k,q)=1}\mu(k)/k^2=o(1/K)$&nbsp;  uniformly in $q$. A more
