--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2377,6 +2377,14 @@ corr&eacute;ligionaires (voir aussi <a href="../GdT-TAN-Store/GdT-TAN-Store.html
  de fa&ccedil;on analytique via une formule de Perron lisse.</span>
 </li> 
 <!-- --------------------------------------------------------------------- -->
+<li> -&#10070;-
+<a  class="someword" href="../CoursKolkata/index.html">
+ The Kolkata Lectures, 2022</a> : <emph><i>On the Transference
+ Principle for Primes</i></emph>.
+<span class="moinsimportant">Enveloping Sieve, Majorant Property and
+  some Examples .</span>
+</li> 
+<!-- --------------------------------------------------------------------- -->
 </ol></div></li> <!-- fin de li CoursNotes -->
 
 <!-- ================================================================= -->
