--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -122,6 +122,10 @@ Voici quelques acteurs :
       <img src="Boat2022-2.jpg" width="250" />
     </td>
   </tr>
+  <tr>
+    <td>Drinking tea : Shanta Laishram, Satadal Ganguly, OR and Anirban Mukhopadhyay</td>
+    <td>On the Dakshineswar-Belur boat: OR, Sumit Kumar, Shanta Laishram and Kummari Mallesham</td>
+  </tr>
 </table>
 </center>
 
