--- a/Epsilons/epsilon.html
+++ b/Epsilons/epsilon.html
@@ -138,7 +138,7 @@ MathJax.Hub.Config({
      <!-- ============================= -->
     <li class="paper">
       <script language="javascript">
-	These("Sumaia  Saad Eddin", "http://ori.univ-lille1.fr/thematic-search.html?menuKey=these&submenuKey=authors&id=saad_eddin_sumaia",
+	These("Sumaia  Saad Eddin", "https://www.jku.at/institut-fuer-finanzmathematik-und-angewandte-zahlentheorie/ueber-uns/team/sumaia-saad-eddin/",
       "On two problems concerning the Laurent-Stieltjes coefficients of Dirichlet L-series",
       "http://ori.univ-lille1.fr/thematic-search.html?menuKey=these&submenuKey=authors&id=saad_eddin_sumaia",
 	"juin 2013");
@@ -178,7 +178,7 @@ MathJax.Hub.Config({
     <!-- ============================= -->
      <li class="paper">
       <script language="javascript">
-      These("Ramdinmawia Vanlalngaia", "",
+      These("Ramdin Mawia Vanlalngaia", "https://sites.google.com/view/ramdinmawia/home",
       "Fonctions de Hardy des s&eacute;ries $L$ et sommes de Mertens explicites",
       "theseRamdinmawiaVanlalngaia.pdf",
 	"juillet 2015");
@@ -282,7 +282,7 @@ functions.
     </li>
     <li class="paper">
       <script language="javascript">
-      Memoire("Vincent Devinck", "",
+      Memoire("Vincent Devinck", "https://smc.math.ca/news-item/catalin-badea-vincent-devinck-and-sophie-grivaux-receive-the-2021-g-de-b-robinson-award/",
       "Around an idea of Bombieri on the Selberg sieve",
       "AroundAnIdeaOfBombieriOnTheSelbergSieve.pdf", "juin 2009", "m&eacute;moire de M2");
       </script>
