--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2377,6 +2377,14 @@ corr&eacute;ligionaires (voir aussi <a href="../GdT-TAN-Store/GdT-TAN-Store.html
  de fa&ccedil;on analytique via une formule de Perron lisse.</span>
 </li> 
 <!-- --------------------------------------------------------------------- -->
+<li> -&#10209;-
+<a  class="someword" href="">
+ The Lethbridge Lectures, 2014</a> : <emph><i>Bilinear decomposition
+ and Gallagher-like Theorem for the M&ouml;bius function </i></emph>.
+<span class="moinsimportant">Lethbridge University, Canada, February
+  22nd -- March 6th.</span>
+</li> 
+<!-- --------------------------------------------------------------------- -->
 <li> -&#10070;-
 <a  class="someword" href="../CoursKolkata/index.html">
  The Kolkata Lectures, 2022</a> : <emph><i>On the Transference
