--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -113,13 +113,13 @@ Voici quelques acteurs :
 <table>
   <tr>
     <td>
-      <img src="TeaKolkata-2022-2.jpg" width="250" />
+      <img src="TeaKolkata-2022-2.jpg" />
     </td>
     <td>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td>
     <td>
-      <img src="Boat2022-2.jpg" width="250" />
+      <img src="Boat2022-2.jpg"x />
     </td>
   </tr>
   <tr>
