--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -113,17 +113,20 @@ Voici quelques acteurs :
 <table>
   <tr>
     <td>
-      <img src="TeaKolkata-2022-2.jpg" />
+      <img src="TeaKolkata-2022-2.jpg" width="250" />
     </td>
     <td>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;
     </td>
     <td>
-      <img src="Boat2022-2.jpg"x />
+      <img src="Boat2022-2.jpg" width="250" />
     </td>
   </tr>
   <tr>
     <td>Drinking tea : Shanta Laishram, Satadal Ganguly, OR and Anirban Mukhopadhyay</td>
+    <td>
+      &nbsp;&nbsp;&nbsp;
+    </td>
     <td>On the Dakshineswar-Belur boat: OR, Sumit Kumar, Shanta Laishram and Kummari Mallesham</td>
   </tr>
 </table>
