--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -113,13 +113,15 @@ Voici quelques acteurs :
 <table>
   <tr>
     <td>
-      <img src="TeaKolkata-2022-2.jpg" width="250" />
+      <img src="TeaKolkata-2022-2.jpg" width="350" />
     </td>
     <td>
-      &nbsp;&nbsp;&nbsp;
+      &nbsp;
+      <img src="InviteMasque.jpg" width="50" />
+      &nbsp;
     </td>
     <td>
-      <img src="Boat2022-2.jpg" width="250" />
+      <img src="Boat2022-2.jpg" width="350" />
     </td>
   </tr>
   <tr>
@@ -132,7 +134,10 @@ Voici quelques acteurs :
 </table>
 </center>
 
-
+<div class="w3-container w3-cell" align="right">
+  <img class="w3-image" src="Mountain.jpg" width="360px"
+       title="Somewhere in Pakistan, 2022">
+  </div>
 </div> <!-- .page .wrapper .content -->
 
 
