--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -117,7 +117,7 @@ Voici quelques acteurs :
     </td>
     <td>
       &nbsp;
-      <img src="InviteMasque.jpg" width="50" />
+      <img src="InviteMasque.png" width="50" />
       &nbsp;
     </td>
     <td>
@@ -134,10 +134,14 @@ Voici quelques acteurs :
 </table>
 </center>
 
-<div class="w3-container w3-cell" align="right">
-  <img class="w3-image" src="Mountain.jpg" width="360px"
-       title="Somewhere in Pakistan, 2022">
+<center>
+  <div class="w3-container w3-cell" align="right">
+    <img class="w3-image" src="Mountain.jpg" width="360px"
+	 title="Somewhere in Pakistan, 2022">
+
   </div>
+</center>
+  
 </div> <!-- .page .wrapper .content -->
 
 
