--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -46,6 +46,10 @@ MathJax.Hub.Config({
 <div class="page content wrapper">
 <strong class="h1" id="logo">The Kolkata Lectures, 2022</strong>
 
+<i><strong class="h2"><span style="color:blue">On the Transference Principle for
+      Primes</span>. Enveloping Sieve, Majorant Property and some Examples</strong> </i>
+<br><br><br>
+
 
 <script language="javascript">
   BandeauGeneral(1, "../", 1);
@@ -113,15 +117,15 @@ Voici quelques acteurs :
 <table>
   <tr>
     <td>
-      <img src="TeaKolkata-2022-2.jpg" width="350" />
+      <img src="TeaKolkata-2022-2.jpg" width="400" />
     </td>
     <td>
       &nbsp;
-      <img src="InviteMasque.png" width="50" />
+      <img src="InviteMasque.png" width="100" />
       &nbsp;
     </td>
     <td>
-      <img src="Boat2022-2.jpg" width="350" />
+      <img src="Boat2022-2.jpg" width="400" />
     </td>
   </tr>
   <tr>
@@ -137,8 +141,7 @@ Voici quelques acteurs :
 <center>
   <div class="w3-container w3-cell" align="right">
     <img class="w3-image" src="Mountain.jpg" width="360px"
-	 title="Somewhere in Pakistan, 2022">
-
+	 title="Somewhere in Pakistan, 2022">&nbsp;&nbsp;&nbsp;
   </div>
 </center>
   
