--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1109,7 +1109,7 @@ $
       "", "FA1853.pdf",
       "http://fa.home.amu.edu.pl/",
       "Functiones et Approximatio, Commentarii Mathematici", 
-      "", 2021, "14", 
+      "vol. 65 no. 1", 2021, "33--45", 
       "https://projecteuclid.org/journals/functiones-et-approximatio-commentarii-mathematici/current");
       nbr();</script>
     <div class="resumecontent">
