--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1977,7 +1977,7 @@ the fundamentals of analytic number theory. It will also appeal to
 researchers in mathematics and engineering interested in experimental
 techniques in this active area.
 <br>
- 
+ A <a href="https://www.maa.org/press/maa-reviews/excursions-in-multiplicative-number-theory">review</a> from MAA.
  </font>
 </blockquote>
          </td>
