--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -39,7 +39,9 @@ MathJax.Hub.Config({
         }
 });
 </script>
-
+<script type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 <!-- ============================================-->
 <!-- End of the inclusion linked to MathJax      -->
 <!-- ============================================-->
@@ -107,13 +109,18 @@ MathJax.Hub.Config({
 
 <ol class="typos">
   <li>Exercise 1.12 should be:
-    <br>
-    $$\text{Show that we have \textgreek{f}}(n)\geq
-  \left({\color{red}\frac{2}{9}}\right)^{\frac{1}{3}}n^{\frac{2}{3}} \text{ for all
-    } n\geq 1$$.
-    <br>
-    The $9/2$ took the place of the $2/9$ in the book.
-</li>
+      <blockquote>
+      Show that we have $\varphi(n)\ge
+      \bigl($<span style="color:#6633CC;font-weight:bold">
+	  ${\frac{2}{9}}$</span>
+      ${}\bigr)^{{1}/{3}}n^{{2}/{3}}$ for all $n\ge 1$.
+      </blockquote>
+      &nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;
+      <i> A <span style="color:#6633CC;font-weight:bold">$\frac{9}{2}$</span>
+	took the place of
+	the <span style="color:#6633CC;font-weight:bold">$\frac{2}{9}$</span>
+	in the book</i>.
+  </li>
 </ol>
 
 <br />
