--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -36,7 +36,7 @@ MathJax.Hub.Config({
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
-   <TITLE>Olivier Ramar&eacute; : The Kolkata Lectures, 2022</TITLE>
+   <TITLE>Olivier Ramar&eacute;: The Kolkata Lectures, 2022</TITLE>
 <a name="Top" class="dontmention"></a>
 </HEAD>
 
@@ -47,7 +47,9 @@ MathJax.Hub.Config({
 <strong class="h1" id="logo">The Kolkata Lectures, 2022</strong>
 
 <i><strong class="h2"><span style="color:blue">On the Transference Principle for
-      Primes</span>. Enveloping Sieve, Majorant Property and some Examples</strong> </i>
+      Primes</span>.
+    <br>
+      Enveloping Sieve, Majorant Property and some Examples</strong> </i>
 <br><br><br>
 
 
